--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,8 @@
             sudo apt install neofetch wget --no-install-recommends -y
             neofetch
             wget https://gitlab.postmarketos.org/postmarketOS/pmaports/-/raw/master/device/community/linux-postmarketos-qcom-msm8953/config-postmarketos-qcom-msm8953.aarch64
-            mv config-postmarketos-qcom-msm8953.aarch64 .config
+            ls -la
+            cp config-postmarketos-qcom-msm8953.aarch64 .config
             ls -la
             pwd
             # sudo apt install build-essential openssl pkg-config libssl-dev libncurses-dev minizip libelf-dev flex bison libc6-dev libidn11-dev rsync bc lz4 debootstrap git curl -y
@@ -50,4 +51,5 @@
           uses: actions/upload-artifact@v4
           with:
             name: kernel-config
-            path: ${{ github.workspace }}/.config
+            path: ${{ github.workspace }}/config-postmarketos-qcom-msm8953.aarch64
+            # ${{ github.workspace }}/.config
