--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,13 +48,14 @@
             # sudo apt install debhelper-compat libdw-dev libssl-dev -y
 
         - name: 提交并推送 config 文件
-          env:
+            run: |
             git config --global user.name "github-actions[bot]"
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
         - name: 提交并推送 config 文件
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            run: |
             git add config-postmarketos-qcom-msm8953.aarch64
             git commit -m "自动提交 config-postmarketos-qcom-msm8953.aarch64"
             git push origin HEAD:${{ github.ref }}
