--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@
             # sudo apt install gcc-aarch64-linux-gnu dpkg-dev dpkg qemu-user-static -y
             # sudo apt install debhelper-compat libdw-dev libssl-dev -y
 
-        - name: 提交并推送 config 文件
+        - name: 设置 Git 用户信息
           run: |
             git config --global user.name "github-actions[bot]"
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
@@ -56,7 +56,10 @@
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           run: |
-            cp  ${{ github.workspace }}/config-postmarketos-qcom-msm8953.aarch64 .
+            pwd
+            ls -la
+            #cp  ${{ github.workspace }}/config-postmarketos-qcom-msm8953.aarch64 .
+            #ls -la
             git add config-postmarketos-qcom-msm8953.aarch64
             git commit -m "自动提交 config-postmarketos-qcom-msm8953.aarch64"
             git push origin HEAD:${{ github.ref }}
